.infrastructure/ecs/security.tf
# ALB security Group: Edit to restrict access to the application
resource "aws_security_group" "lb" {
  name        = "cb-load-balancer-security-group"
  description = "controls access to the ALB"
  #  vpc_id      = aws_vpc.main.id
  vpc_id = aws_default_vpc.default_vpc.id

  ingress {
    protocol    = "tcp"
    from_port   = var.app_port
    to_port     = var.app_port
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Traffic to the ECS cluster should only come from the ALB
resource "aws_security_group" "ecs_tasks" {
  name        = "cb-ecs-tasks-security-group"
  description = "allow inbound access from the ALB only"
  #  vpc_id      = aws_vpc.main.id
  vpc_id = aws_default_vpc.default_vpc.id

  ingress {
    protocol        = "tcp"
    from_port       = var.app_port
    to_port         = var.app_port
    security_groups = [aws_security_group.lb.id]
  }

  egress {
    protocol        = "tcp"
    from_port       = 5432
    to_port         = 5432
    security_groups = [aws_security_group.rds_sg.id]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "rds_sg" {
  vpc_id = aws_default_vpc.default_vpc.id
  name   = "rds-security-group"
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = "tcp"
    from_port   = 5432
    to_port     = 5432
  }
  #   ingress {
  #     cidr_blocks     = ["0.0.0.0/0"]
  #     protocol        = "tcp"
  #     from_port       = 5432
  #     to_port         = 5432
  #     security_groups = [aws_security_group.ecs_tasks.id, aws_security_group.lb.id]
  #     #    security_groups = ["0.0.0.0/0"]
  #   }

  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


# resource "aws_vpc_peering_connection" "vpc-rds-peer" {
#   vpc_id      = aws_vpc.main.id
#   peer_vpc_id = aws_default_vpc.default_vpc.id
#   auto_accept = true
#
#   accepter {
#     allow_remote_vpc_dns_resolution = true
#   }
#   requester {
#     allow_remote_vpc_dns_resolution = true
#   }
#
# }
